@@ -178,7 +178,17 @@ public final class FileStoreResourceCacheImpl extends AbstractResourceCache {
             metadata.setCreatedAt(System.currentTimeMillis());
             metadata.setRefId(refId);
             if (existingMetadata == null) {
-                metadataStore.store(con, metadata);
+                try {
+                    metadataStore.store(con, metadata);
+                } catch (final SQLException e) {
+                    if (!e.getClass().getName().endsWith("MySQLIntegrityConstraintViolationException")) {
+                        throw e;
+                    }
+                    // Seems to be inserted in the meantime
+                    rollbackAndReleaseCon(con, contextId, dbService);
+                    rollbackFile(refId, fileStorage);
+                    return save(id, bytes, optName, optType, userId, contextId);
+                }
             } else {
                 metadataStore.update(con, metadata);
             }
@@ -203,24 +213,33 @@ public final class FileStoreResourceCacheImpl extends AbstractResourceCache {
                     }
                 }
             } else {
-                if (con != null) {
-                    try {
-                        con.rollback();
-                    } catch (SQLException e) {
-                        LOG.warn("Could not rollback database transaction after failing to cache a resource. Consider using 'checkconsistency' to clean up the database.");
-                    }
-                    Databases.autocommit(con);
-                    dbService.backWritableAfterReading(contextId, con);
-                }
-
-                try {
-                    if (refId != null && !fileStorage.deleteFile(refId)) {
-                        LOG.warn("Could not remove stored file '{}' during transaction rollback. Consider using 'checkconsistency' to clean up the filestore.", refId);
-                    }
-                } catch (OXException e) {
-                    LOG.warn("Could not remove stored file '{}' during transaction rollback. Consider using 'checkconsistency' to clean up the filestore.", refId, e);
-                }
+                rollbackAndReleaseCon(con, contextId, dbService);
+                rollbackFile(refId, fileStorage);
             }
+        }
+    }
+
+    private void rollbackFile(final String refId, final FileStorage fileStorage) {
+        if (null != refId) {
+            try {
+                if (!fileStorage.deleteFile(refId)) {
+                    LOG.warn("Could not remove stored file '{}' during transaction rollback. Consider using 'checkconsistency' to clean up the filestore.", refId);
+                }
+            } catch (Exception e) {
+                LOG.warn("Could not remove stored file '{}' during transaction rollback. Consider using 'checkconsistency' to clean up the filestore.", refId, e);
+            }
+        }
+    }
+
+    private void rollbackAndReleaseCon(final Connection con, final int contextId, final DatabaseService dbService) {
+        if (con != null) {
+            try {
+                con.rollback();
+            } catch (Exception e) {
+                LOG.warn("Could not rollback database transaction after failing to cache a resource. Consider using 'checkconsistency' to clean up the database.");
+            }
+            Databases.autocommit(con);
+            dbService.backWritableAfterReading(contextId, con);
         }
     }
 
